Changed Arms 101 page so that images are similar in size.

--- a/arms_101.html
+++ b/arms_101.html
@@ -103,76 +103,84 @@
     </div><br><br>
     <!-- BODY -->
     <div class="container">
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Close Grip Barbell Bench Press</div>
-            <div class="card-body text-center">
-              <img src="close_grip_bench_press_bb.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(4 sets |15, 12, 10, 8)</i></p>
-              <p><u>Info</u>: There will be 4 sets. Focus on control and contraction. Increase the weight and decrease the reps each set. 2-count negative, 1-count up, and 1-count squeeze will yield the best results.</p>
-              <p><u>Form</u>: Grab the bar so that your hands are 4-5 inches apart. Draw your shoulder blades backward. Bring the bar in a straight down motion and touch the bar to your chest around your sternum. Keep your  arms as close to your sides as possible in order to focus the triceps.</p>
-            </div>
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-header text-center h5">Close Grip Barbell Bench Press</div>
+          <img class="card-img-top" src="close_grip_bench_press_bb.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(4 sets |15, 12, 10, 8)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 4 sets. Focus on control and contraction. Increase the weight and decrease
+              the reps each set. 2-count negative, 1-count up, and 1-count squeeze will yield the best results.</p>
+            <p class="card-text"><u>Form</u>: Grab the bar so that your hands are 4-5 inches apart. Draw your shoulder blades backward.
+              Bring the bar in a straight down motion and touch the bar to your chest around your sternum. Keep your  arms as close
+              to your sides as possible in order to focus the triceps.</p>
           </div>
         </div>
-      </div>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Barbell Curls</div>
-            <div class="card-body text-center">
-              <img src="curls_bb.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(4 sets |15, 12, 10, 8)</i></p>
-              <p><u>Info</u>: There will be 4 sets. Focus on control and contraction. Increase the weight and decrease the reps each set. Focus on a 3-count negative and squeezing the muscle at the top.</p>
-              <p><u>Form</u>: Grab the bar about shoulder width apart with your palms facing outward. Keeping your elbows at your sides, bend at the elbow and bring the bar toward your chest and squeeze the bicep at the top.</p>
-            </div>
+        <div class="card">
+          <div class="card-header text-center h5">Barbell Curls</div>
+          <img class="card-img-top" src="curls_bb.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(4 sets |15, 12, 10, 8)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 4 sets. Focus on control and contraction. Increase the weight and decrease
+              the reps each set. Focus on a 3-count negative and squeezing the muscle at the top.</p>
+            <p class="card-text"><u>Form</u>: Grab the bar about shoulder width apart with your palms facing outward. Keeping your elbows
+              at your sides, bend at the elbow and bring the bar toward your chest and squeeze the bicep at the top.</p>
           </div>
         </div>
       </div>
+    </div><br>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">EZ-Bar Skullcrusher</div>
-            <div class="card-body text-center">
-              <img src="skullcrusher_ez.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(4 sets |15, 12, 10, 10)</i></p>
-              <p><u>Info</u>: There will be 4 sets. Focus on control and contraction. Increase the weight and decrease the reps each set. Alternate arms while performing the set.</p>
-              <p><u>Form</u>: Grab the dumbells and hold them at your sides with your palms facing each other. Keeping your elbow at your side, curl the bar up and keep your palms facing each other.</p>
-            </div>
+    <div class="container">
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-header text-center h5">EZ-Bar Skullcrusher</div>
+          <img class="card-img-top" src="skullcrusher_ez.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(4 sets |15, 12, 10, 10)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 4 sets. Focus on control and contraction. Increase the weight and decrease
+              the reps each set. Alternate arms while performing the set.</p>
+            <p class="card-text"><u>Form</u>: Grab the dumbells and hold them at your sides with your palms facing each other. Keeping
+              your elbow at your side, curl the bar up and keep your palms facing each other.</p>
           </div>
         </div>
-      </div>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Dumbbell Hammer Curls</div>
-            <div class="card-body text-center">
-              <img src="hammer_curls.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(4 sets |12, 12, 10, 10)</i></p>
-              <p><u>Info</u>: There will be 4 sets. Focus on control and contraction. Increase the weight and decrease the reps each set. Alternate arms while performing the set.</p>
-              <p><u>Form</u>: Grab the dumbells and hold them at your sides with your palms facing each other. Keeping your elbow at your side, curl the bar up and keep your palms facing each other.</p>
-            </div>
+        <div class="card">
+          <div class="card-header text-center h5">Dumbbell Hammer Curls</div>
+          <img class="card-img-top" src="hammer_curls.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(4 sets |12, 12, 10, 10)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 4 sets. Focus on control and contraction. Increase the weight and
+              decrease the reps each set. Alternate arms while performing the set.</p>
+            <p class="card-text"><u>Form</u>: Grab the dumbells and hold them at your sides with your palms facing each other.
+               Keeping your elbow at your side, curl the bar up and keep your palms facing each other.</p>
           </div>
         </div>
       </div>
+    </div><br>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Dumbbell Curls X Tricep Pushdowns</div>
-            <div class="card-body text-center">
-              <img src="tricep_pushdown.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(2 sets | AMRAP)</i></p>
-              <p><u>Info</u>: There will be 3 sets. Focus on control and contraction. Increase the weight and decrease the reps each set. Focus on a 3-count negative and squeezing the muscle at the top.</p>
-              <p><u>Form</u>: For the dumbbell curls, hold the dumbbells at your sides with your palms facing forward. Keeping your elbows still, curl the dumbbell upward and at the top turn your hand slightly more outward to squeeze the bicep.</p>
-              <p>For the tricep pushdowns, attach a straight bar to the cable and grab it with your palms facing downward. Keeping your elbows at your sides and holding the bar straight in front of you, push the bar downward to fully extend your arm and squeeze the triceps.</p>
-            </div>
+    <div class="container">
+      <div class="card-deck mx-auto" style="max-width: 36rem;">
+        <div class="card">
+          <div class="card-header text-center h5">Dumbbell Curls X Tricep Pushdowns</div>
+          <img class="tricep_pushdown.jpg" src="row_cable.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(2 sets | AMRAP)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 3 sets. Focus on control and contraction. Increase the weight and
+              decrease the reps each set. Focus on a 3-count negative and squeezing the muscle at the top.</p>
+            <p class="card-text"><u>Form</u>: For the dumbbell curls, hold the dumbbells at your sides with your palms facing forward.
+              Keeping your elbows still, curl the dumbbell upward and at the top turn your hand slightly more outward to squeeze the
+              bicep.</p>
+            <p class="card-text">For the tricep pushdowns, attach a straight bar to the cable and grab it with your palms facing downward.
+               Keeping your elbows at your sides and holding the bar straight in front of you, push the bar downward to fully
+               extend your arm and squeeze the triceps.</p>
           </div>
         </div>
       </div>
-    </div>
+    </div><br>
+    <!-- FOOTER -->
+    <footer class="page-footer font-small" style="background-color: #fd7e14;">
+      <div class="footer-copyright text-center py-3">© 2019 Copyright</div>
+    </footer>
 
 </html>
