--- a/login.html
+++ b/login.html
@@ -107,12 +107,12 @@
               <form>
                 <div class="form-group">
                   <label for="exampleInputEmail1">Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1.1" aria-describedby="emailHelp" placeholder="Enter email">
+                  <input type="email" class="form-control" id="exampleInputEmail2" aria-describedby="emailHelp" placeholder="Enter email">
                   <div id ="failemail" style="display:none;color:red"> Incorrect email</div>
                 </div>
                 <div class="form-group">
                   <label for="exampleInputPassword1">Password</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1.1" placeholder="Enter password">
+                  <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Enter password">
                   <div id = "failpass" style="display:none;color:red"> Incorrect password </div>
                 </div>
                 <div class="form-group form-check">
@@ -141,7 +141,7 @@
             <form class="needs-validation" novalidate>
               <div class="form-group">
                 <label for="validationCustom01">First name</label>
-                <input type="text" class="form-control firstName" id="validationCustom01" placeholder="John" required>
+                <input type="text" class="form-control firstName" id="signUpFirstName" placeholder="John" required>
                 <div class="valid-feedback">
                   Looks good!
                 </div>
@@ -150,8 +150,8 @@
                 </div>
               </div>
               <div class="form-group">
-                <label for="validationCustom02">Last name</label>
-                <input type="text" class="form-control secondName" id="validationCustom02" placeholder="Doe" required>
+                <label for="validationCustom01">Last name</label>
+                <input type="text" class="form-control secondName" id="signUpLastName" placeholder="Doe" required>
                 <div class="valid-feedback">
                   Looks good!
                 </div>
@@ -160,12 +160,12 @@
                 </div>
               </div>
               <div class="form-group">
-                <label for="exampleInputEmail2">Email address</label>
-                <input type="email" class="form-control emailAddress" id="exampleInputEmail2.1" aria-describedby="emailHelp" placeholder="john_doe@email.com" required>
-                <div class="invalid-feedback">
+                <label for="exampleInputEmail3">Email address</label>
+                <input type="email" class="form-control emailAddress" id="exampleInputEmail4" aria-describedby="emailHelp" placeholder="john_doe@email.com" required>
+                <div class="invalid-feedback" id="emailFail">
                   Please input a valid email.
                 </div>
-                <div class="valid-feedback">
+                <div class="valid-feedback" id="emailPass">
                   Looks good!
                 </div>
               </div>
@@ -176,17 +176,17 @@
                     <span class="input-group-text" id="inputGroupPrepend">@</span>
                   </div>
                   <input type="text" class="form-control" id="validationCustomUsername" placeholder="heyitsjohn" aria-describedby="inputGroupPrepend" required>
-                  <div class="invalid-feedback">
+                  <div class="invalid-feedback" id="usernameFail">
                     Please choose a username.
                   </div>
-                  <div class="valid-feedback">
+                  <div class="valid-feedback" id="usernamePass">
                     Looks good!
                   </div>
                 </div>
               </div>
               <div class="form-group" id="show_hide_password">
-                <label for="exampleInputPassword2">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword2.1" placeholder="Enter password" required>
+                <label for="exampleInputPassword3">Password</label>
+                <input type="password" class="form-control" id="exampleInputPassword4" placeholder="Enter password" required>
                 <div class="invalid-feedback">
                   Please choose a password.
                 </div>
@@ -195,7 +195,7 @@
                 </div>
               </div><br>
               <div class="text-center">
-                <button type="submit" class="btn btn-primary" id="signUpButton">Sign me up!</button>
+                <button type="reset" class="btn btn-primary" id="signUpButton">Sign me up!</button>
               </div>
             </form>
             <!-- SIGN UP VALIDATION SCRIPT -->
