--- a/arms_102.html
+++ b/arms_102.html
@@ -103,53 +103,130 @@
     </div><br><br>
     <!-- BODY -->
     <div class="container">
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Reverse Tricep Pushdown X Tricep Pushdowns</div>
-            <div class="card-body text-center">
-              <img src="reverse_tricep_pushdown.jpg" class="img-fluid" alt="Responsive image">
-              <img src="tricep_pushdown.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(3 sets |10x10, 10x10, 10x10)</i></p>
-              <p><u>Info</u>: There will be 3 sets. Focus on control and contraction. Keep the weight constant through all sets. This will be a mechanical drop set, meaning the weight and movement is the same but it will change to a stronger grip for the second part of the set. Perform the traditional pushdowns immediately after the set.</p>
-              <p><u>Form</u>:For the reverse tricep pushdowns, attach a straight bar to the cable and grab it with your palms facing upward. Keeping your elbows at your sides and holding the bar straight in front of you, push the bar downward to fully extend your arm and squeeze the triceps.</p>
-              <p>For the tricep pushdowns, attach a straight bar to the cable and grab it with your palms facing downward. Keeping your elbows at your sides and holding the bar straight in front of you, push the bar downward to fully extend your arm and squeeze the triceps.</p>
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-header text-center h5">everse Tricep Pushdown X Tricep Pushdowns</div>
+          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="reverse_tricep_pushdown.jpg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="tricep_pushdown.jpg" alt="Second slide">
+              </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <div class="card-body">
+            <p class="card-text text-center"><i>(3 sets |10x10, 10x10, 10x10)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 3 sets. Focus on control and contraction. Keep the
+              weight constant through all sets. This will be a mechanical drop set, meaning the weight and movement
+              is the same but it will change to a stronger grip for the second part of the set. Perform the
+              traditional pushdowns immediately after the set.</p>
+            <p class="card-text"><u>Form</u>:For the reverse tricep pushdowns, attach a straight bar to the cable and
+              grab it with your palms facing upward. Keeping your elbows at your sides and holding the bar straight
+              in front of you, push the bar downward to fully extend your arm and squeeze the triceps.</p>
+            <p class="card-text">For the tricep pushdowns, attach a straight bar to the cable and grab it with your
+              palms facing downward. Keeping your elbows at your sides and holding the bar straight in front of you,
+              push the bar downward to fully extend your arm and squeeze the triceps.</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-header text-center h5">Barbell Curls X Reverse Barbell Curls</div>
+          <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="curls_bb.jpg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="reverse_curl_bb.jpg" alt="Second slide">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleSlidesOnly" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleSlidesOnly" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <div class="card-body">
+            <p class="card-text text-center"><i>(3 sets |10x10, 10x10, 10x10)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 3 sets. Focus on control and contraction. Keep the
+              weight constant through all sets but decrease the weight 10-15% for the reverse barbell curls. Perform
+              these immediately after the traditional curls.</p>
+            <p class="card-text"><u>Form</u>: For the barbell curls, grab the bar about shoulder width apart with
+              your palms facing outward. Keeping your elbows at your sides, bend at the elbow and bring the bar
+              toward your chest and squeeze the bicep at the top.</p>
+            <p class="card-text">For the reverse barbell curls, grab the bar about shoulder width apart with your
+              palms facing inward. Keeping your elbows at your sides, bend at the elbow and bring the bar toward
+              your chest and squeeze the bicep at the top.</p>
           </div>
         </div>
       </div>
+    </div><br>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Barbell Curls X Reverse Barbell Curls</div>
-            <div class="card-body text-center">
-              <img src="curls_bb.jpg" class="img-fluid" alt="Responsive image">
-              <img src="reverse_curl_bb.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(3 sets |10x10, 10x10, 10x10)</i></p>
-              <p><u>Info</u>: There will be 3 sets. Focus on control and contraction. Keep the weight constant through all sets but decrease the weight 10-15% for the reverse barbell curls. Perform these immediately after the traditional curls.</p>
-              <p><u>Form</u>: For the barbell curls, grab the bar about shoulder width apart with your palms facing outward. Keeping your elbows at your sides, bend at the elbow and bring the bar toward your chest and squeeze the bicep at the top.</p>
-              <p>For the reverse barbell curls, grab the bar about shoulder width apart with your palms facing inward. Keeping your elbows at your sides, bend at the elbow and bring the bar toward your chest and squeeze the bicep at the top.</p>
+    <div class="container">
+      <div class="card-deck mx-auto" style="max-width: 36rem;">
+        <div class="card">
+          <div class="card-header text-center h5">EZ-Bar Skull Crushers X Dumbbell Hammer Curls</div>
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="skullcrusher_ez.jpg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="hammer_curls.jpg" alt="Second slide">
+              </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <div class="card-body">
+            <p class="card-text text-center"><i>(4 sets |12x12, 12x12, 10x10, 10x10)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 4 sets. Focus on control and contraction. Increase
+              the weight and decrease the reps each set after the second set. Perform the hammer curls on both
+              rms simultaneously and immediately after the skullcrushers.</p>
+            <p class="card-text"><u>Form</u>: For the skull crushers, grab the easy curl bar on the closer portion of
+              the bend. On a flat or incline bench, extend your arms so they are straight up. Keeping your
+              elbows in place, lower the bar slightly above your forehead and the extend straight.</p>
+            <p class="card-text">For the hammer curls, grab the dumbells and hold them at your sides with your 
+              palms facing each other. Keeping your elbow at your side, curl the bar up and keep your palms
+              facing each other.</p>
           </div>
         </div>
       </div>
-
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">EZ-Bar Skull Crushers X Dumbbell Hammer Curls</div>
-            <div class="card-body text-center">
-              <img src="skullcrusher_ez.jpg" class="img-fluid" alt="Responsive image">
-              <img src="hammer_curls.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(4 sets |12x12, 12x12, 10x10, 10x10)</i></p>
-              <p><u>Info</u>: There will be 4 sets. Focus on control and contraction. Increase the weight and decrease the reps each set after the second set. Perform the hammer curls on both arms simultaneously and immediately after the skullcrushers.</p>
-              <p><u>Form</u>: For the skull crushers, grab the easy curl bar on the closer portion of the bend. On a flat or incline bench, extend your arms so they are straight up. Keeping your elbows in place, lower the bar slightly above your forehead and the extend straight.</p>
-              <p>For the hammer curls, grab the dumbells and hold them at your sides with your palms facing each other. Keeping your elbow at your side, curl the bar up and keep your palms facing each other.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
+    </div><br>
+    <!-- FOOTER -->
+    <footer class="page-footer font-small" style="background-color: #fd7e14;">
+      <div class="footer-copyright text-center py-3">© 2019 Copyright</div>
+    </footer>
 
 </html>
