--- a/arms_103.html
+++ b/arms_103.html
@@ -103,77 +103,113 @@
     </div><br><br>
     <!-- BODY -->
     <div class="container">
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">EZ-Bar Buddy Curls</div>
-            <div class="card-body text-center">
-              <img src="curls_ez.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(1 set |15-12-10-8-6-4-2)</i></p>
-              <p><u>Info</u>: There will be 1 set. Focus on control and contraction. Choose a weight attainable for 15 reps. After completing the reps, pass the bar to a buddy and then take the bar back when your buddy is done and drop the number of reps for the next set. If you are alone, set the bar down and rest for the amount of reps counted in seconds.</p>
-              <p><u>Form</u>: Grab the bar on the outer portion of the EZ bar. Keeping your elbows in the same position at your sides, curl the bar upward until it nearly touches your chest. Return it to the starting position.</p>
-            </div>
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-header text-center h5">EZ-Bar Buddy Curls</div>
+          <img class="card-img-top" src="curls_ez.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(1 set |15-12-10-8-6-4-2)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 1 set. Focus on control and contraction. Choose a
+              weight attainable for 15 reps. After completing the reps, pass the bar to a buddy and then take the
+              bar back when your buddy is done and drop the number of reps for the next set. If you are alone,
+              set the bar down and rest for the amount of reps counted in seconds.</p>
+            <p class="card-text"><u>Form</u>: Grab the bar on the outer portion of the EZ bar. Keeping your
+              elbows in the same position at your sides, curl the bar upward until it nearly touches your chest.
+              Return it to the starting position.</p>
           </div>
         </div>
-      </div>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">EZ-Bar Skullcrusher</div>
-            <div class="card-body text-center">
-              <img src="skullcrusher_ez.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(4 sets |15, 10, 5, 10)</i></p>
-              <p><u>Info</u>: There will be 4 sets. Focus on control and contraction. Increase the weight 10-15% and decrease the reps for the first 3 sets. Add 10-15% back on for the final set.</p>
-              <p><u>Form</u>: Grab the easy curl bar on the closer portion of the bend. On a flat or incline bench, extend your arms so they are straight up. Keeping your elbows in place, lower the bar slightly above your forehead and the extend straight.</p>
-            </div>
+        <div class="card">
+          <div class="card-header text-center h5">EZ-Bar Skullcrusher</div>
+          <img class="card-img-top" src="skullcrusher_ez.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(4 sets |15, 10, 5, 10)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 4 sets. Focus on control and contraction. Increase the
+              weight 10-15% and decrease the reps for the first 3 sets. Add 10-15% back on for the final set.</p>
+            <p class="card-text"><u>Form</u>: Grab the easy curl bar on the closer portion of the bend. On a
+              flat or incline bench, extend your arms so they are straight up. Keeping your elbows in place, lower
+               the bar slightly above your forehead and the extend straight.</p>
           </div>
         </div>
       </div>
+    </div><br>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Single Arm Preacher Curls</div>
-            <div class="card-body text-center">
-              <img src="curls_preacher_db.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(3 sets |10, 5, 5)</i></p>
-              <p><u>Info</u>: There will be 3 sets. Focus on control and contraction. Increase the weight 15-20% and decrease the reps after the first set.</p>
-              <p><u>Form</u>: Place your arm on a preacher curl pad. Keeping the upper part of your triceps on the pad and positioning yourself so that your armpits are touching the pad, curl the bar upward toward your body. Perform one arm at a time.</p>
-            </div>
+    <div class="container">
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-header text-center h5">Single Arm Preacher Curls</div>
+          <img class="card-img-top" src="curls_preacher_db.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(3 sets |10, 5, 5)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 3 sets. Focus on control and contraction. Increase
+              the weight 15-20% and decrease the reps after the first set.</p>
+            <p class="card-text"><u>Form</u>: Place your arm on a preacher curl pad. Keeping the upper part of
+              your triceps on the pad and positioning yourself so that your armpits are touching the pad, curl
+              the bar upward toward your body. Perform one arm at a time.</p>
           </div>
         </div>
-      </div>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Flat Bench Dumbbell Skull Crushers</div>
-            <div class="card-body text-center">
-              <img src="skullcrushers_db.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(3 sets |15-10, 15-10, 15-10)</i></p>
-              <p><u>Info</u>: There will be 3 sets. Focus on control and contraction. Perform the first part of the set doing traditional skullcrusher reps with one arm. For the second part, turn your hand inward 90 degrees and perform the rest of the set doing reps across your body.</p>
-              <p><u>Form</u>: Grab the dumbbells and extend them straight above you with your palms facing inward. Keeping your elbows in place, lower the dumbbells until they nearly touch your shoulder before extending them back to the starting position.</p>
-            </div>
+        <div class="card">
+          <div class="card-header text-center h5">Flat Bench Dumbbell Skull Crushers</div>
+          <img class="card-img-top" src="skullcrushers_db.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(3 sets |15-10, 15-10, 15-10)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 3 sets. Focus on control and contraction. Perform the
+              first part of the set doing traditional skullcrusher reps with one arm. For the second part, turn your
+              hand inward 90 degrees and perform the rest of the set doing reps across your body.</p>
+            <p><u>Form</u>: Grab the dumbbells and extend them straight above you with your
+              palms facing inward. Keeping your elbows in place, lower the dumbbells until they nearly touch your
+              shoulder before extending them back to the starting position.</p>
           </div>
         </div>
       </div>
+    </div><br>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">High-Cable Concentration Curls X Overhead Cable Tricep Extensions</div>
-            <div class="card-body text-center">
-              <img src="curls_concentration_rp.jpg" class="img-fluid" alt="Responsive image">
-              <img src="tricep_overhead_extension_rp.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(3 sets |10/10xAMRAP, 10/10xAMRAP, 10/10xAMRAP)</i></p>
-              <p><u>Info</u>: There will be 3 sets. Focus on control and contraction. For the curls, perform 10 reps with a 1-count up, 1-count squeeze, and 3-count negative tempo. Then perform 10 reps with a 1-count up 1-count negative tempo. Finish the set by performing the tricep extensions for as many reps as possible using the same weight.</p>
-              <p><u>Form</u>: For the curls, grab a rope and position it at the top of the cable. Lean slightly backwards and grab the rope with your palms facing each other. Keeping your arms in front of you and elbows in place, curl the rope towards you to squeeze the biceps.</p>
-              <p>For the extensions, leave the rope at the top of the cable. Turn around and extend the rope so it is above your head and in front of you. Keep your elbows in place and allow the rope to nearly touch the top of your head before extending your arms back to the start.</p>
+    <div class="container">
+      <div class="card-deck mx-auto" style="max-width: 36rem;">
+        <div class="card">
+          <div class="card-header text-center h5">High-Cable Concentration Curls X Overhead Cable Tricep Extensions</div>
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="curls_concentration_rp.jpg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="tricep_overhead_extension_rp.jpg" alt="Second slide">
+              </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <div class="card-body">
+            <p class="card-text text-center"><i>(3 sets |10/10xAMRAP, 10/10xAMRAP, 10/10xAMRAP)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 3 sets. Focus on control and contraction. For the
+              curls, perform 10 reps with a 1-count up, 1-count squeeze, and 3-count negative tempo.
+              Then perform 10 reps with a 1-count up 1-count negative tempo. Finish the set by performing the tricep
+              extensions for as many reps as possible using the same weight.</p>
+            <p><u>Form</u>: For the curls, grab a rope and position it at the top of the cable.
+              Lean slightly backwards and grab the rope with your palms facing each other. Keeping your arms in
+              front of you and elbows in place, curl the rope towards you to squeeze the biceps.</p>
+            <p>For the extensions, leave the rope at the top of the cable. Turn around and extend
+               the rope so it is above your head and in front of you. Keep your elbows in place and allow the rope
+                to nearly touch the top of your head before extending your arms back to the start.</p>
           </div>
         </div>
       </div>
-    </div>
+    </div><br>
+    <!-- FOOTER -->
+    <footer class="page-footer font-small" style="background-color: #fd7e14;">
+      <div class="footer-copyright text-center py-3">© 2019 Copyright</div>
+    </footer>
 
 </html>
