--- a/abs_101.html
+++ b/abs_101.html
@@ -103,37 +103,65 @@
     </div><br><br>
     <!-- BODY -->
     <div class="container">
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Sit ups X Leg Raises X  Russian Twists</div>
-            <div class="card-body text-center">
-              <img src="sit_ups.jpg" class="img-fluid" alt="Responsive image">
-              <img src="leg_lifts.jpg" class="img-fluid" alt="Responsive image">
-              <img src="russian_twists.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(3 sets |10x10x20)</i></p>
-              <p><u>Info</u>: There will be 3 sets. Perform sit ups, leg raises, and russian twists in immediate succession.</p>
-              <p><u>Form</u>: For the sit ups lay on the floor but bend your knees. Arch your back and then sit up bending at the abdominals.</p>
-              p>For the leg raises, lay flat on the ground with your feet together. Keeping your hands on your abs, lift your legs up and point them straight in the air. When they are straight lift your glutes off the ground using your core.</p>
-              <p>For the russian twists, bend at the abs and create a v shape with your body where only your glutes are touching the ground. Alternate touching the ground on either side of you.</p>
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-header text-center h5">Sit ups X Leg Raises X  Russian Twists</div>
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="sit_ups.jpg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="leg_lifts.jpg" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="russian_twists.jpg" alt="Third slide">
+              </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <div class="card-body">
+            <p class="card-text text-center"><i>(3 sets |10x10x20)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 3 sets. Perform sit ups, leg raises, and russian
+              twists in immediate succession.</p>
+            <p class="card-text"><u>Form</u>: For the sit ups lay on the floor but bend your knees. Arch your back
+              and then sit up bending at the abdominals.</p>
+            <p class="card-text">For the leg raises, lay flat on the ground with your feet together. Keeping your hands on your abs,
+              lift your legs up and point them straight in the air. When they are straight lift your glutes off the
+              ground using your core.</p>
+            <p class="card-text">For the russian twists, bend at the abs and create a v shape with your body where
+              only your glutes are touching the ground. Alternate touching the ground on either side of you.</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-header text-center h5">Ab-Machine Crunches</div>
+          <img class="card-img-top" src="crunches_machine.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(3 sets |12, 12, 12)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 3 sets. Find an abdominal machine and perform 12 reps
+              keeping the weight constant.</p>
+            <p class="card-text"><u>Form</u>: Find a machine to do ab crunches. Place your arms on the appropriate
+              parts of the machine and perform the reps, bending at the abdominals.</p>
           </div>
         </div>
       </div>
-
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Ab-Machine Crunches</div>
-            <div class="card-body text-center">
-              <img src="crunches_machine.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(3 sets |12, 12, 12)</i></p>
-              <p><u>Info</u>: There will be 3 sets. Find an abdominal machine and perform 12 reps keeping the weight constant.</p>
-              <p><u>Form</u>: Find a machine to do ab crunches. Place your arms on the appropriate parts of the machine and perform the reps, bending at the abdominals.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
+    </div><br>
+    <!-- FOOTER -->
+    <footer class="page-footer font-small" style="background-color: #fd7e14;">
+      <div class="footer-copyright text-center py-3">© 2019 Copyright</div>
+    </footer>
 
 </html>
