Changed Cardio pages so that images are similar in size.

--- a/rowing.html
+++ b/rowing.html
@@ -88,32 +88,39 @@
     </nav><br><br><br>
     <!-- BODY -->
     <div class="container">
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Fat Loss</div>
-            <div class="card-body text-center">
-              <img src="rowing_fat_loss.jpeg" class="img-fluid" alt="Responsive image">
-              <p><i>5 minute warm up period</i>: 2 minutes using just your arms to warm up the back, and 3 minutes doing the full movement at a normal pace</p>
-              <p><u>Fat Loss Interval</u>: Perform between 10 and 20 times for a workout.<br/><i>- Moderate rowing period</i>: 1 minutes of moderate speed rowing<br/><i>- Fast rowing period</i>: 30 seconds of intense rowing</p>
-              <p><u>Fat Loss Interval</u> x 10 = 20 minutes<br/><u>Fat Loss Interval</u> x 20 = 35 minutes</p>
-            </div>
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-header text-center h5">Fat Loss</div>
+          <img class="card-img-top" src="rowing_fat_loss.jpeg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(5 minute warm up period</i>: 2 minutes using just your arms to
+              warm up the back, and 3 minutes doing the full movement at a normal pace)</p>
+            <p class="card-text"><u>Fat Loss Interval</u>: Perform between 10 and 20 times for a workout.</p>
+            <p class="card-text" style="margin-left: 40px"><i>- Moderate rowing period</i>: 1 minutes of moderate speed rowing</p>
+            <p class="card-text" style="margin-left: 40px"><i>- Fast rowing period</i>: 30 seconds of intense rowing</p>
+            <p class="card-text"><u>Fat Loss Interval</u> x 10 = 20 minutes</p>
+            <p class="card-text"><u>Fat Loss Interval</u> x 20 = 35 minutes</p>
           </div>
         </div>
-      </div>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Conditioning</div>
-            <div class="card-body text-center">
-              <img src="rowing_conditioning.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>5 minute warm up period</i>: 2 minutes using just your arms to warm up the back, and 3 minutes doing the full movement at a normal pace</p>
-              <p><u>Conditioning Interval</u>: Perform between 15 and 25 times for a workout.<br/><i>- Moderate rowing period</i>: 2 minutes of moderate speed rowing<br/><i>- Fast rowing period</i>: 30 seconds of intense rowing</p>
-              <p><u>Conditioning Interval</u> x 10 = 30 minutes<br/><u>Conditioning Interval</u> x 20 = 55 minutes</p>
-            </div>
+        <div class="card">
+          <div class="card-header text-center h5">Conditioning</div>
+          <img class="card-img-top" src="rowing_conditioning.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(5 minute warm up period</i>: 2 minutes using just your arms to warm up the back,
+              and 3 minutes doing the full movement at a normal pace)</p>
+            <p class="card-text"><u>Conditioning Interval</u>: Perform between 15 and 25 times for a workout.</p>
+            <p class="card-text" style="margin-left: 40px"><i>- Moderate rowing period</i>: 2 minutes of moderate speed rowing</p>
+            <p class="card-text" style="margin-left: 40px"><i>- Fast rowing period</i>: 30 seconds of intense rowing</p>
+            <p class="card-text"><u>Conditioning Interval</u> x 10 = 30 minutes</p>
+            <p class="card-text"><u>Conditioning Interval</u> x 20 = 55 minutes</p>
           </div>
         </div>
       </div>
+    </div><br>
+    <!-- FOOTER -->
+    <footer class="page-footer font-small" style="background-color: #fd7e14;">
+      <div class="footer-copyright text-center py-3">© 2019 Copyright</div>
+    </footer>
 
 </html>
