--- a/stairmaster.html
+++ b/stairmaster.html
@@ -88,34 +88,41 @@
     </nav><br><br><br>
     <!-- BODY -->
     <div class="container">
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Fat Loss</div>
-            <div class="card-body text-center">
-              <img src="stairmaster_fat_loss.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(4 sets | 15, 12, 12, 10-8)</i></p>
-              <p><i>5 minute warm up period</i>: climb at a normal pace</p>
-              <p><u>Fat Loss Interval</u>: Perform between 10 and 20 times for a workout.<br/><i>- Fast climbing period</i>: 1 minutes of moderate speed stepping focusing on leg contraction<br/><i>- Sprinting period</i>: 1 minute of intense stepping focusing on getting as many steps as possible</p>
-              <p><u>Fat Loss Interval</u> x 10 = 25 minutes<br/><u>Fat Loss Interval</u> x 20 = 45 minutes</p>
-            </div>
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-header text-center h5">Fat Loss</div>
+          <img class="card-img-top" src="stairmaster_fat_loss.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(5 minute warm up period</i>: climb at a normal pace)</p>
+            <p class="card-text"><u>Fat Loss Interval</u>: Perform between 10 and 20 times for a workout.</p>
+            <p class="card-text" style="margin-left: 40px"><i>- Fast climbing period</i>: 1 minutes of moderate
+              speed stepping focusing on leg contraction</p>
+            <p class="card-text" style="margin-left: 40px"><i>- Sprinting period</i>: 1 minute of intense stepping
+              focusing on getting as many steps as possible</p>
+            <p class="card-text"><u>Fat Loss Interval</u> x 10 = 25 minutes</p>
+            <p class="card-text"><u>Fat Loss Interval</u> x 20 = 45 minutes</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-header text-center h5">Conditioning</div>
+          <img class="card-img-top" src="stairmaster_conditioning.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(5 minute warm up period</i>: climb at a normal pace)</p>
+            <p class="card-text"><u>Conditioning Interval</u>: Perform between 15 and 25 times for a workout</p>
+            <p class="card-text" style="margin-left: 40px"><i>- Fast climbing period</i>: 2 minutes of moderate speed
+              stepping focusing on leg contraction</p>
+            <p class="card-text" style="margin-left: 40px"><i>- Sprinting period</i>: 1 minute of intense stepping focusing
+              on getting as many steps as possible</p>
+            <p class="card-text"><u>Conditioning Interval</u> x 10 = 35 minutes</p>
+            <p class="card-text"><u>Conditioning Interval</u> x 20 = 65 minutes</p>
           </div>
         </div>
       </div>
-
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Conditioning</div>
-            <div class="card-body text-center">
-              <img src="stairmaster_conditioning.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>5 minute warm up period</i>: climb at a normal pace</p>
-              <p><u>Conditioning Interval</u>: Perform between 15 and 25 times for a workout.<br/><i>- Fast climbing period</i>: 2 minutes of moderate speed stepping focusing on leg contraction<br/><i>- Sprinting period</i>: 1 minute of intense stepping focusing on getting as many steps as possible</p>
-              <p><u>Conditioning Interval</u> x 10 = 35 minutes<br/><u>Conditioning Interval</u> x 20 = 65 minutes</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
+    </div><br>
+    <!-- FOOTER -->
+    <footer class="page-footer font-small" style="background-color: #fd7e14;">
+      <div class="footer-copyright text-center py-3">© 2019 Copyright</div>
+    </footer>
 
 </html>
