--- a/goals_challenges.html
+++ b/goals_challenges.html
@@ -1,61 +1,169 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
+<head>
+	<title>User Profile</title>
+	<link rel="stylesheet" type="text/css" href="css/user-style.css">
+</head>
+	<meta charset="utf-8">
+	      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	      <meta name="viewpoint" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	      <title>Tangerine Fit</title>
+	      <!-- BOOTSTRAP -->
+	      <link href="css/bootstrap.min.css" rel="stylesheet">
+	      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
+	      <script src="js/bootstrap.min.js"></script>
+	      <!-- The firebase information. Its the following two scripts that will be added wherever firebase will be needed-->
+	    <!--   <script src="https://www.gstatic.com/firebasejs/5.8.4/firebase.js"></script>
+	      <script src="js/db_handling.js"></script> -->
+	      <script src="js/loginButtonChange.js"></script>
+	    </head>
 
-    <head>
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewpoint" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <title>Tangerine Fit</title>
-      <!-- BOOTSTRAP -->
-      <link href="css/bootstrap.min.css" rel="stylesheet">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
-      <script src="js/bootstrap.min.js"></script>
-    </head>
-
-    <h5 class="display-4 mb-4 text-center">Workout Goals & Challenges</h5>
-
-  <div class="container-fluid">
-    <table class="table table-bordered">
-      <tbody>
-        <tr>
-          <td height="120"></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td height="120"></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td height="120"></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td height="120"></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+	    <!-- NAVIGATION BAR -->
+	    <nav class="navbar navbar-expand-lg fixed-top navbar-light" style="background-color: #fd7e14;">
+	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+	        <span class="navbar-toggler-icon"></span>
+	      </button>
+	      <a class="navbar-brand text-light" href="home_tangerine.html" id="test">Tangerine Fit</a>
+	      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+	        <ul class="navbar-nav">
+	          <!-- HOME BUTTON -->
+	          <li class="nav-item">
+	            <a class="btn btn-light" role="button" href="home_tangerine.html">Home</a>
+	          </li>
+	          <!-- WEIGHTLIFTING DROPDOWN BUTTON -->
+	          <li class="nav-item dropdown">
+	            <div class="btn-group">
+	              <a class="btn btn-light" href="weightlifting_tangerine.html" role="button">Weightlifting</a>
+	              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	                <span class="sr-only">Toggle Dropdown</span>
+	              </button>
+	            <div class="dropdown-menu">
+	                <a class="dropdown-item" href="chest_101.html">Chest</a>
+	                <a class="dropdown-item" href="back_101.html">Back</a>
+	                <a class="dropdown-item" href="legs_101.html">Legs</a>
+	                <a class="dropdown-item" href="shoulders_101.html">Shoulders</a>
+	                <a class="dropdown-item" href="arms_101.html">Arms</a>
+	                <a class="dropdown-item" href="abs_101.html">Abdominals</a>
+	              </div>
+	            </div>
+	          </li>
+	          <!-- CARDIO DROPDOWN BUTTON -->
+	          <li class="nav-item dropdown">
+	            <div class="btn-group">
+	              <a class="btn btn-light" href="cardio_tangerine.html" role="button">Cardio</a>
+	              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	                <span class="sr-only">Toggle Dropdown</span>
+	              </button>
+	              <div class="dropdown-menu">
+	                <a class="dropdown-item" href="treadmill.html">Treadmill</a>
+	                <a class="dropdown-item" href="exercise_bike.html">Exercise Bike</a>
+	                <a class="dropdown-item" href="elliptical.html">Elliptical</a>
+	                <a class="dropdown-item" href="rowing.html">Rowing Machine</a>
+	                <a class="dropdown-item" href="stairmaster.html">StairMaster</a>
+	              </div>
+	            </div>
+	          </li>
+	          <!-- HIIT DROPDOWN BUTTON -->
+	          <li class="nav-item dropdown">
+	            <div class="btn-group">
+	              <a class="btn btn-light" href="hiit_tangerine.html" role="button">HIIT</a>
+	              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	                <span class="sr-only">Toggle Dropdown</span>
+	              </button>
+	              <div class="dropdown-menu">
+	                <a class="dropdown-item" href="hiit_strength_101.html">Strength</a>
+	                <a class="dropdown-item" href="hiit_fl_101.html">Fat Loss</a>
+	              </div>
+	            </div>
+	          </li>
+	          <!-- ABOUT BUTTON -->
+	          <li class="nav-item">
+	            <a class="btn btn-light" role="button" href="about_tangerine.html">About</a>
+	          </li>
+	        </ul>
+	      </div>
+	      <!-- LOG-IN LINK -->
+	      <div>
+	        <ul class="navbar-nav">
+	          <li class="nav-item">
+	            <a class="btn btn-light" role="button" href="login.html" id="changeIfLogged"><b>LOG IN</b> or <b>SIGN UP</b> </a>
+	          </li>
+	        </ul>
+	      </div>
+	    </nav><br><br><br><br>
+		<!-- BODY -->
+		<body>
+			<div class ="container">
+				<div class="row justify-content-md-center">
+					<div class="col-3 border border-info rounded"><br>
+						<img class="card-img-top" src="download.png" alt="Card image cap">
+						<p class="text-center h5">@Username</p><br>
+						<!-- VERTICAL NAV BAR-->
+						<div class="nav nav-pills flex-column" aria-orientation="vertical">
+							<li class="nav-item">
+						  	<a class="nav-link" href="user_profile.html" role="tab">PROFILE</a>
+							</li>
+							<li>
+						  	<a class="nav-link active" href="goals_challenges.html">WORKOUT CALENDAR</a>
+							</li>
+						</div><br>
+					</div>
+					<!-- SPACE BETWEEN NAV BAR AND CONTENT -->
+					<div class="col-1">
+					</div>
+					<!-- NAV BAR CONTENT -->
+					<div class="col-8 border border-info rounded">
+						<h1 class="display-4 text-center" style="font-size: 2.7rem">Workout Calendar</h1><br>
+            <div class="container-fluid">
+              <table class="table table-bordered">
+                <tbody>
+                  <tr>
+                    <td height="120"></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <td height="120"></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <td height="120"></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <td height="120"></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div><br>
+					</div>
+				</div>
+			</div><br><br>
+		</body>
+		<!-- FOOTER -->
+    <footer class="page-footer font-small" style="background-color: #fd7e14;">
+      <div class="footer-copyright text-center py-3">© 2019 Copyright</div>
+    </footer>
 
 </html>
