Added footer to pages that didn't have one.

--- a/cardio_tangerine.html
+++ b/cardio_tangerine.html
@@ -107,5 +107,9 @@
           or after a weightlifting routine.</p>
         </div>
     </div>
+    <!-- FOOTER -->
+    <footer class="page-footer font-small" style="background-color: #fd7e14;">
+      <div class="footer-copyright text-center py-3">© 2019 Copyright</div>
+    </footer>
 
 </html>
