--- a/about_tangerine.html
+++ b/about_tangerine.html
@@ -173,5 +173,9 @@
         </div>
       </div>
     </div>
+    <!-- FOOTER -->
+    <footer class="page-footer font-small" style="background-color: #fd7e14;">
+      <div class="footer-copyright text-center py-3">© 2019 Copyright</div>
+    </footer>
 
 </html>
