--- a/login.html
+++ b/login.html
@@ -225,5 +225,9 @@
       </div>
       </div>
     </div><br><br>
+    <!-- FOOTER -->
+    <footer class="page-footer font-small" style="background-color: #fd7e14;">
+      <div class="footer-copyright text-center py-3">© 2019 Copyright</div>
+    </footer>
 
 </html>
