Added logo on every page.

--- a/abs_103.html
+++ b/abs_103.html
@@ -18,7 +18,11 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand text-light" href="home_tangerine.html">Tangerine Fit</a>
+      <span>
+        <a class="navbar-brand" href="home_tangerine.html">
+          <img src="logo.png" height="45"></a>
+        <a class="navbar-brand text-light" href="home_tangerine.html">Tangerine Fit</a>
+      </span>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
         <ul class="navbar-nav">
           <!-- HOME BUTTON -->
@@ -85,7 +89,7 @@
           </li>
         </ul>
       </div>
-    </nav>
+    </nav><br>
     <!--  GRID BUTTONS -->
     <div class="container">
       <br><br><br>
@@ -154,7 +158,7 @@
               ground using your core.</p>
             <p class="card-text">For the sit ups lay on the floor but bend your knees. Arch your back and then sit up
               bending at the abdominals. </p>
-            <p class="card-text">For the oblique lean, lay flat on the floor, bend your knees, and place your hands 
+            <p class="card-text">For the oblique lean, lay flat on the floor, bend your knees, and place your hands
               at your sides. Using your obliques, move your torso back and forth in order to touch your hands to
               your heels while your torso remains on the ground.</p>
           </div>
