--- a/arms_102.html
+++ b/arms_102.html
@@ -18,7 +18,11 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand text-light" href="home_tangerine.html">Tangerine Fit</a>
+      <span>
+        <a class="navbar-brand" href="home_tangerine.html">
+          <img src="logo.png" height="45"></a>
+        <a class="navbar-brand text-light" href="home_tangerine.html">Tangerine Fit</a>
+      </span>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
         <ul class="navbar-nav">
           <!-- HOME BUTTON -->
@@ -85,7 +89,7 @@
           </li>
         </ul>
       </div>
-    </nav>
+    </nav><br>
     <!--  GRID BUTTONS -->
     <div class="container">
       <br><br><br>
@@ -217,7 +221,7 @@
             <p class="card-text"><u>Form</u>: For the skull crushers, grab the easy curl bar on the closer portion of
               the bend. On a flat or incline bench, extend your arms so they are straight up. Keeping your
               elbows in place, lower the bar slightly above your forehead and the extend straight.</p>
-            <p class="card-text">For the hammer curls, grab the dumbells and hold them at your sides with your 
+            <p class="card-text">For the hammer curls, grab the dumbells and hold them at your sides with your
               palms facing each other. Keeping your elbow at your side, curl the bar up and keep your palms
               facing each other.</p>
           </div>
