--- a/home_tangerine.html
+++ b/home_tangerine.html
@@ -18,7 +18,11 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand text-light" href="home_tangerine.html">Tangerine Fit</a>
+      <span>
+        <a class="navbar-brand" href="home_tangerine.html">
+          <img src="logo.png" height="45"></a>
+        <a class="navbar-brand text-light" href="home_tangerine.html">Tangerine Fit</a>
+      </span>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
         <ul class="navbar-nav">
           <!-- HOME BUTTON -->
@@ -86,7 +90,7 @@
         </ul>
       </div>
     </nav>
-    <br><br>
+    <br><br><br>
     <!-- BODY -->
     <div class="container">
       <div>
@@ -103,7 +107,7 @@
           you a crazy workout!</p><br>
         <p class="text-center h5 text-primary">Tangerine Fit™ is your one stop workout spot!</p>
       </div>
-    </div><br><br><br><br>
+    </div><br><br><br>
     <!-- FOOTER -->
     <footer class="page-footer font-small" style="background-color: #fd7e14;">
       <div class="footer-copyright text-center py-3">© 2019 Copyright</div>
