--- a/arms_101.html
+++ b/arms_101.html
@@ -17,8 +17,11 @@
     <nav class="navbar navbar-expand-lg fixed-top navbar-light" style="background-color: #fd7e14;">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button>
-      <a class="navbar-brand text-light" href="home_tangerine.html">Tangerine Fit</a>
+      </button><span>
+        <a class="navbar-brand" href="home_tangerine.html">
+          <img src="logo.png" height="45"></a>
+        <a class="navbar-brand text-light" href="home_tangerine.html">Tangerine Fit</a>
+      </span>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
         <ul class="navbar-nav">
           <!-- HOME BUTTON -->
@@ -85,7 +88,7 @@
           </li>
         </ul>
       </div>
-    </nav>
+    </nav><br>
     <!--  GRID BUTTONS -->
     <div class="container">
       <br><br><br>
