--- a/goals_challenges.html
+++ b/goals_challenges.html
@@ -24,7 +24,11 @@
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="navbar-toggler-icon"></span>
 	      </button>
-	      <a class="navbar-brand text-light" href="home_tangerine.html" id="test">Tangerine Fit</a>
+				<span>
+	        <a class="navbar-brand" href="home_tangerine.html">
+	          <img src="logo.png" height="45"></a>
+	        <a class="navbar-brand text-light" href="home_tangerine.html">Tangerine Fit</a>
+	      </span>
 	      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
 	        <ul class="navbar-nav">
 	          <!-- HOME BUTTON -->
@@ -91,7 +95,7 @@
 	          </li>
 	        </ul>
 	      </div>
-	    </nav><br><br><br><br>
+	    </nav><br><br><br><br><br>
 		<!-- BODY -->
 		<body>
 			<div class ="container">
