--- a/hiit_tangerine.html
+++ b/hiit_tangerine.html
@@ -18,7 +18,11 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand text-light" href="home_tangerine.html">Tangerine Fit</a>
+      <span>
+        <a class="navbar-brand" href="home_tangerine.html">
+          <img src="logo.png" height="45"></a>
+        <a class="navbar-brand text-light" href="home_tangerine.html">Tangerine Fit</a>
+      </span>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
         <ul class="navbar-nav">
           <!-- HOME BUTTON -->
@@ -85,7 +89,7 @@
           </li>
         </ul>
       </div>
-    </nav><br><br>
+    </nav><br><br><br>
     <!-- BODY -->
     <div class="container">
       <div id="main">
@@ -101,7 +105,7 @@
           routines are designed to ensure that muscles are broken down and your heart rate stays up.</p>
 
       </div>
-    </div><br><br><br><br><br><br><br><br>
+    </div><br><br><br><br><br><br><br>
     <!-- FOOTER -->
     <footer class="page-footer font-small" style="background-color: #fd7e14;">
       <div class="footer-copyright text-center py-3">© 2019 Copyright</div>
