Added + buttons to workouts on Chest 101 page.

--- a/chest_101.html
+++ b/chest_101.html
@@ -109,7 +109,38 @@
     <div class="container">
       <div class="card-deck">
         <div class="card">
-          <div class="card-header text-center h5">Flat Barbell Bench Press</div>
+          <div class="card-header text-left h5">Flat Barbell Bench Press
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#exampleModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-sm" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Choose a Date</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <form>
+                    <div class="row">
+                      <div class="col">
+                        <input type="date" max="2050-12-31" min="2019-01-31">
+                      </div>
+                    </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary">Add Workout</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <img class="card-img-top" src="flat_bb_bench.jpg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text text-center"><i>(4 sets | 15, 12, 12, 10-8)</i></p>
@@ -124,7 +155,12 @@
         </div>
 
         <div class="card">
-          <div class="card-header text-center h5">Incline Barbell Bench Press</div>
+          <div class="card-header text-left h5">Incline Barbell Bench Press
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#exampleModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
           <img class="card-img-top" src="incline_bb_bench.jpeg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text text-center"><i>(4 sets | 15, 12, 12, 10-8)</i></p>
@@ -142,7 +178,12 @@
     <div class="container">
       <div class="card-deck">
         <div class="card">
-          <div class="card-header text-center h5">Incline Dumbbell Bench Press</div>
+          <div class="card-header text-left h5">Incline Dumbbell Bench Press
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#exampleModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
           <img class="card-img-top" src="incline_db_bench.jpeg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text text-center"><i>(4 sets | 15, 15, 12, 12)</i></p>
@@ -155,7 +196,12 @@
         </div>
 
         <div class="card">
-          <div class="card-header text-center h5">Bodyweight Dips</div>
+          <div class="card-header text-left h5">Bodyweight Dips
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#exampleModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
           <img class="card-img-top" src="dips.jpeg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text text-center"><i>(2 sets | AMRAP)</i></p>
@@ -171,7 +217,12 @@
     <div class="container">
       <div class="card-deck mx-auto" style="max-width: 36rem;">
         <div class="card">
-          <div class="card-header text-center h5">Push-Ups</div>
+          <div class="card-header text-left h5">Push-Ups
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#exampleModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
           <img class="card-img-top" src="pushups.jpeg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text text-center"><i>(1 set | AMRAP)</i></p>
