Fixed footer on home page.

--- a/home_tangerine.html
+++ b/home_tangerine.html
@@ -107,9 +107,9 @@
           you a crazy workout!</p><br>
         <p class="text-center h5 text-primary">Tangerine Fit™ is your one stop workout spot!</p>
       </div>
-    </div><br><br><br>
+    </div>
     <!-- FOOTER -->
-    <footer class="page-footer font-small" style="background-color: #fd7e14;">
+    <footer class="page-footer fixed-bottom font-small" style="background-color: #fd7e14;">
       <div class="footer-copyright text-center py-3">© 2019 Copyright</div>
     </footer>
 
