--- a/user_profile.html
+++ b/user_profile.html
@@ -103,18 +103,8 @@
 		<h5>Work Out Goals/Challenges 
 		</h5>
 			
-		<input class="button" type="submit" value="Change Password" name="ChangePassword">
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
+		<input class="button btn-light" type="submit" value="Change Password" name="ChangePassword">
+		<br><br><br><br><br><br><br><br><br><br><br>
 	</section>
 		<aside id="sidebar">
 				<h1>Personal Profile</h1>
@@ -135,7 +125,7 @@
 						<label>Email: </label>
 						<input type="text" name="email">
 					</div>
-					<input class="button" type="submit" value="Update Profile" name="UpdateProfile">
+					<input class="button btn-light" type="submit" value="Update Profile" name="UpdateProfile">
 				</form>
 		</aside>
 
