Added logo on home page body.

--- a/home_tangerine.html
+++ b/home_tangerine.html
@@ -95,6 +95,9 @@
     <div class="container">
       <div>
         <br>
+        <div align="center">
+          <img class="text-center" width="100" src="logo.png">
+        </div>
         <h1 align="center">Tangerine Fit</h1><br>
         <p>Tangerine Fit ™ is the one fitness site to cater to every person for every fitness goal! The unique workouts
           are tailored for different skill levels and different end goals to ensure that no other site will be needed!</p>
