made some add buttons visible.

--- a/chest_101.html
+++ b/chest_101.html
@@ -109,8 +109,8 @@
     <div class="container">
       <div class="card-deck">
         <div class="card">
-          <div class="card-header text-left h5">Flat Barbell Bench Press
-            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#exampleModal">
+          <div class="workout card-header text-left h5">Flat Barbell Bench Press
+            <button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#exampleModal">
               <img src="plus.png"  width="20" alt="Plus sign">
               Add to Calendar
             </button>
@@ -140,7 +140,6 @@
               </div>
             </div>
           </div>
-
           <img class="card-img-top" src="flat_bb_bench.jpg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text text-center"><i>(4 sets | 15, 12, 12, 10-8)</i></p>
@@ -156,7 +155,7 @@
 
         <div class="card">
           <div class="card-header text-left h5">Incline Barbell Bench Press
-            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#exampleModal">
+            <button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#exampleModal">
               <img src="plus.png"  width="20" alt="Plus sign">
               Add to Calendar
             </button>
